<resources>
    <string name="app_name">UNIVERSIDAD X RS</string>

    <string name="BTNlogin">Ingresa</string>
    <string name="BTNregistrar">REGISTRATE</string>

    <string name="TXTregistro">Registro</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="telefono">Ingrese su teléfono</string>
    <string name="carrera">Ingrese su carrera</string>
    <string name="correo">Ingrese su correo</string>
    <string name="contraseña">Ingrese su contraseña</string>
    <string name="RegistrarUsuario">REGISTRAME</string>

    <!--Login-->
    <string name="CorreoLog">Correo Electrónico</string>
    <string name="ContraLog">Contraseña</string>
    <string name="Ingresar">INGRESA</string>

    <!--DIALOG PARA INICIO DE SESION FALLIDO-->
    <string name="ErrorSesion">(Error de correo o contraseña) No se pudo iniciar la sesión, vuelva a intentarlo</string>
    <string name="Ok_ErrorSesion">OK :(</string>

    <!--PERFIL-->
    <string name="uidtxt">Uid: </string>
    <string name="uidPerfil"> -- </string>
    <string name="correotxt">Correo: </string>
    <string name="correoPerfil">Correo: </string>
    <string name="nombrestxt">Nombres: </string>
    <string name="nombresPerfil">Nombres: </string>

    <!--MENU-->
    <string name="MisDatosOpcion">Mis Datos</string>
    <style name="CrearPublicacionOpcion">Crear Publicación</style>
    <string name="PublicacionesOpcion">Publicaciones</string>
    <string name="UsuarioOpciones">Amigos</string>
    <string name="ChatsOpciones">Chats</string>
    <string name="CerrarSesion">Cerrar Sesión</string>

</resources>