<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <!--TITULO-->

        <TextView
            android:text="@string/TXTregistro"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--IMAGEN-->

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/registro"/>

        <!--NOMBRES-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nombres"
                android:hint="@string/nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:gravity="center"
                android:textColorHint="#000000"
                android:inputType="textCapWords|textAutoCorrect"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--APELLIDOS-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/apellidos"
                android:hint="@string/apellidos"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:gravity="center"
                android:textColorHint="#000000"
                android:inputType="textCapWords|textAutoCorrect"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--EDAD-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edad"
                android:hint="@string/edad"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:gravity="center"
                android:textColorHint="#000000"
                android:inputType="number"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--TELEFONO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/telefono"
                android:hint="@string/telefono"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:gravity="center"
                android:textColorHint="#000000"
                android:inputType="number"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--CARRERA-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/carrera"
                android:hint="@string/carrera"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:gravity="center"
                android:textColorHint="#000000"
                android:inputType="text"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--CORREO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/correo"
                android:hint="@string/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:gravity="center"
                android:textColorHint="#000000"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--CONTRASEÑA-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/contraseña"
                android:hint="@string/contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:gravity="center"
                android:textColorHint="#000000"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--REGISTRARSE-->
        <Button
            android:id="@+id/RegistrarUsuario"
            android:text="@string/RegistrarUsuario"
            android:backgroundTint="#000000"
            android:textColor="#ffffff"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>