<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Inicio">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--FONDO DE PORTADA-->
        <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="center"
        android:src="@drawable/portada"/>


        <!--DATOS REUTILIZADOS-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="80dp">

            <!--FOTO DE PERFIL-->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/usuario"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="center"
                android:background="#ffffff"
                android:padding="3dp"/>

            <!--DATOS EXTRA-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <!--uid-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/uidtxt"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:id="@+id/uidPerfil"
                        android:text="@string/correoPerfil"
                        android:background="#000000"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--nombres-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/nombrestxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/nombresPerfil"
                        android:text="@string/nombresPerfil"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--apellidos-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--edad-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--telefono-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--carrera-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--correo-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/correotxt"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/correoPerfil"
                        android:background="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </RelativeLayout>

    <!--<Button
        android:id="@+id/CerrarSesion"
        android:text="Cerrar Sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>-->


</androidx.core.widget.NestedScrollView>